# comp-vision-exercises

./: readme.md
src/10NeuralNets/: ML for tabular data.ipynb  simpleNet.ipynb
src/11CNN/: cnn.ipynb
src/12GAN/: gan.ipynb
src/13_3D_CompVision/3D_processing/: basic.ipynb
src/1readImg/: usb_cam.py
src/3sizingCrop/: CMakeLists.txt
src/5ColorDetection/: main.cpp
src/6FeatureExtraction/: CMakeLists.txt  feature_detect.py  feature_extraction.h  harris.cpp  surf.cpp
src/7FeatureTracking/: main.cpp
src/9DetectionTracking/: main.cpp
src/basicFunc/: CMakeLists.txt  main.cpp
src/readImg/: CMakeLists.txt  readImg.cpp
